- Increase the maximum device name length. - Actually check that the entered device name does not exceed the   maximum device name length.

PR:		misc/18466
MFC after:	2 weeks